# autowz

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: router.py
app/api/routes/: articles.py  scheduler.py
app/core/: __init__.py  config.py  logging.py
app/db/: crud.py  engine.py  models.py
app/models/: __init__.py  schemas.py
app/services/: pipeline.py
app/services/collector/: __init__.py  baidu.py  base.py  manager.py  search.py  weibo.py
app/services/guard/: __init__.py  service.py
app/services/humanizer/: __init__.py  service.py
app/services/llm/: __init__.py  client.py
app/services/selector/: __init__.py  service.py
app/services/wechat/: __init__.py  client.py  cover_generator.py  draft_service.py  exceptions.py  material_service.py  publish_service.py  service.py  token_service.py
app/services/writer/: __init__.py  service.py
app/tasks/: __init__.py  scheduler.py
docs/: 开发文档-今天怎么看-微信公众号自动发布系统.md
scripts/: init_db.py
tests/: test_collector.py  test_guard.py  test_health.py  test_pipeline.py
